chore: name update

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 @import 'tailwindcss/utilities';
 
 .typewriter {
-  width: 300px;
+  width: 41vh;
   animation: typing 2s steps(22), blink .5s step-end infinite alternate;
   white-space: nowrap;
   overflow: hidden;
